--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "debug": "node --inspect ./bin/www"
   },
   "dependencies": {
+    "@hapi/joi": "^15.0.3",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
@@ -15,6 +16,7 @@
     "hbs": "~4.0.4",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
+    "mysql2": "^2.3.3-rc.0",
     "sequelize": "^6.7.0"
   },
   "devDependencies": {
