--- a/package.json
+++ b/package.json
@@ -10,16 +10,20 @@
   "dependencies": {
     "@hapi/joi": "^15.0.3",
     "bcrypt": "^5.0.1",
+    "connect-flash": "^0.1.1",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
     "dotenv": "^10.0.0",
     "express": "~4.16.1",
+    "express-session": "^1.17.2",
     "hbs": "~4.0.4",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
     "mysql2": "^2.3.3-rc.0",
     "nodemailer": "^6.7.0",
+    "passport": "^0.5.0",
+    "passport-local": "^1.0.0",
     "sequelize": "^6.7.0"
   },
   "devDependencies": {
