--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "mysql2": "^2.3.3-rc.0",
     "nodemailer": "^6.7.0",
     "passport": "^0.5.0",
+    "passport-facebook": "^3.0.0",
+    "passport-google": "^0.3.0",
     "passport-local": "^1.0.0",
     "sequelize": "^6.7.0"
   },
