--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
 URL_WEB = http://127.0.0.1:5000
+FACEBOOK_KEY = 625765701948731
+FACEBOOK_SECRET = 2c1cd4a10a83db2d3959e2813f858768
+CALLBACK_URL = http://localhost:5000/api/auth/facebook/callback
