update use jwt passport

--- a/.env
+++ b/.env
@@ -5,3 +5,4 @@ FACEBOOK_CALLBACK_URL = http://localhost:5000/api/auth/facebook/callback
 GOOGLE_CONSUMER_KEY = 11212
 GOOGLE_CONSUMER_SECRET = abc
 GOOGLE_CALLBACK_URL = http://localhost:5000/api/auth/google/callback
+JWT_SECRET = SOME_THING_WENT_WRONGSOME_THING_WENT_WRONGSOME_THING_WENT_WRONG
