--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ URL_WEB = http://127.0.0.1:5000
 FACEBOOK_KEY = 625765701948731
 FACEBOOK_SECRET = 2c1cd4a10a83db2d3959e2813f858768
 FACEBOOK_CALLBACK_URL = http://localhost:5000/api/auth/facebook/callback
-GOOGLE_CONSUMER_KEY = 11212
-GOOGLE_CONSUMER_SECRET = abc
+GOOGLE_CONSUMER_KEY = 947468891664-olv0ieth7v7jalrglc08dr0mjrrgaasp.apps.googleusercontent.com
+GOOGLE_CONSUMER_SECRET = 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
 GOOGLE_CALLBACK_URL = http://localhost:5000/api/auth/google/callback
 JWT_SECRET = SOME_THING_WENT_WRONGSOME_THING_WENT_WRONGSOME_THING_WENT_WRONG
