--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "passport": "^0.5.0",
     "passport-facebook": "^3.0.0",
     "passport-google": "^0.3.0",
+    "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "sequelize": "^6.7.0"
