--- a/.env
+++ b/.env
@@ -1,4 +1,7 @@
 URL_WEB = http://127.0.0.1:5000
-FACEBOOK_KEY = 625765701948731
-FACEBOOK_SECRET = 2c1cd4a10a83db2d3959e2813f858768
-CALLBACK_URL = http://localhost:5000/api/auth/facebook/callback
+FACEBOOK_CLIENT_ID=409647430856255
+FACEBOOK_CLIENT_SECRET=c25f207facd259439f8a01450b2e3c0f
+FACEBOOK_CALLBACK_URL=https://localhost:5000/api/auth/facebook/callback
+GOOGLE_CLIENT_ID=958955829700-7ktrdttfkbtrao1vqiqtqka4oqvoml7l.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
+GOOGLE_CALLBACK_URL=https://localhost:5000/api/auth/google/callback
