--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-URL_WEB = http://127.0.0.1:5000/
+URL_WEB = https://127.0.0.1:5000
 FACEBOOK_CLIENT_ID=409647430856255
 FACEBOOK_CLIENT_SECRET=c25f207facd259439f8a01450b2e3c0f
 FACEBOOK_CALLBACK_URL=https://localhost:5000/api/auth/facebook/callback
