--- a/.env
+++ b/.env
@@ -6,3 +6,7 @@ GOOGLE_CLIENT_ID=958955829700-7ktrdttfkbtrao1vqiqtqka4oqvoml7l.apps.googleuserco
 GOOGLE_CLIENT_SECRET=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
 GOOGLE_CALLBACK_URL=https://localhost:5000/api/auth/google/callback
 JWT_SECRET = SOME_THING_WENT_WRONGSOME_THING_WENT_WRONGSOME_THING_WENT_WRONG
+DB_HOST=localhost
+DB_USER=root
+DB_PASSWORD=null
+DB_NAME=classroom_db
