--- a/.env
+++ b/.env
@@ -1,11 +1,11 @@
-URL_WEB = https://127.0.0.1:5000
-URL_FRONT_END = http://localhost:3000
+URL_WEB = https://classroom-gradebook-api.herokuapp.com
+URL_FRONT_END = https://vigilant-benz-fdf8d6.netlify.app
 FACEBOOK_CLIENT_ID=409647430856255
 FACEBOOK_CLIENT_SECRET=c25f207facd259439f8a01450b2e3c0f
-FACEBOOK_CALLBACK_URL=https://localhost:5000/api/auth/facebook/callback
+FACEBOOK_CALLBACK_URL=https://classroom-gradebook-api.herokuapp.com/api/auth/facebook/callback
 GOOGLE_CLIENT_ID=958955829700-7ktrdttfkbtrao1vqiqtqka4oqvoml7l.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
-GOOGLE_CALLBACK_URL=https://localhost:5000/api/auth/google/callback
+GOOGLE_CALLBACK_URL=https://classroom-gradebook-api.herokuapp.com/api/auth/google/callback
 JWT_SECRET = SOME_THING_WENT_WRONGSOME_THING_WENT_WRONGSOME_THING_WENT_WRONG
 DB_HOST=database-1.cjzq5y6iqkqb.ap-southeast-1.rds.amazonaws.com
 DB_USER=admin
